@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 18:34:34 brook Exp $
+
+SHA1 (R/sessioninfo_1.1.1.tar.gz) = f3ec48d09d91d4f7b03a09aded4a5bc9db7c9d42
+RMD160 (R/sessioninfo_1.1.1.tar.gz) = 51d9677259691931ef6b5984fe37259f2e313b8f
+SHA512 (R/sessioninfo_1.1.1.tar.gz) = 1bf174a5b98b53fca18572334c4084c3104ea0e85de073c7e0ec12b0e66b7b3d9ccd7f1a1d1e507b29e6b5817a80e11c7c6fd147aeac424a9ca6e8587a577caa
+Size (R/sessioninfo_1.1.1.tar.gz) = 46027 bytes
